chore: Update README.rst.